--- a/advancedwritting/solutions/beginner-1.html
+++ b/advancedwritting/solutions/beginner-1.html
@@ -13,9 +13,9 @@
     <div class="wrapper">
         <div class="nav-bar">
             <ul>
-              <a href="../index.html">
-                  <li>Home</li>
-              </a>
+                <a href="../index.html">
+                    <li>Home</li>
+                </a>
                 <a href="../internet.html">
                     <li>What the Internet Knows</li>
                 </a>
@@ -24,16 +24,23 @@
                 </a>
             </ul>
         </div>
-        <div class="content">
-            <h1>Private Browsing (Safari) or Incognito Mode (Chrome)</h1>
-            <p>Certain browsers have a private browsing mode that won’t track the pages you visit or any data you input on a website. Unfortunately, private browsing is not as private as you may think and there are certainly ways that you can still be tracked
-                despite using it.</p>
-            <h2>Use Private Browsing/Incognito Mode:</h2>
-            <ul>
-                <li>1. Click file</li>
-                <li>2. Select new private window (Safari) or new Incognito window (Chrome)</li>
-                <li>3. Continue surfing the Internet as you would normally.</li>
-            </ul>
+        <div class="content-wrapper">
+            <div class="content">
+                <h1>Private Browsing (Safari) or Incognito Mode (Chrome)</h1>
+                <p>Certain browsers have a private browsing mode that won’t track the pages you visit or any data you input on a website. Unfortunately, private browsing is not as private as you may think and there are certainly ways that you can still be
+                    tracked despite using it.</p>
+                <h2>Use Private Browsing/Incognito Mode:</h2>
+                <ul>
+                    <li>1. Click file</li>
+                    <li>2. Select new private window (Safari) or new Incognito window (Chrome)</li>
+                    <li>3. Continue surfing the Internet as you would normally.</li>
+                </ul>
+                <a href="../solutions.html">
+                    <div class="button">
+                        More Solutions
+                    </div>
+                </a>
+            </div>
         </div>
 
     </div>
