--- a/advancedwritting/solutions/beginner-2.html
+++ b/advancedwritting/solutions/beginner-2.html
@@ -12,38 +12,49 @@
 <body class="advanced-writting">
     <div class="wrapper">
         <div class="nav-bar">
-          <ul>
-            <a href="../index.html">
-                <li>Home</li>
-            </a>
-              <a href="../internet.html">
-                  <li>What the Internet Knows</li>
-              </a>
-              <a href="../solutions.html">
-                  <li>Solutions</li>
-              </a>
-          </ul>
+            <ul>
+                <a href="../index.html">
+                    <li>Home</li>
+                </a>
+                <a href="../internet.html">
+                    <li>What the Internet Knows</li>
+                </a>
+                <a href="../solutions.html">
+                    <li>Solutions</li>
+                </a>
+            </ul>
         </div>
-        <div class="content">
-            <h1>Log out of social media when you’re browsing the web</h1>
-            <p>Some apps make it difficult to log out by forcing the user take extra steps to find the log out button.
-              This is a simple solution that helps minimize the amount of information websites can collect about you. </p>
-            <h2>Logout of Facebook on IPhone:</h2>
-            <ul>
-                <li>1. Open the Facebook app</li>
-                <li>2. Open the menu </li>
-                <li>3. Select More</li>
-                <li>4. Select Logout button</li>
-                <li>5. Confirm Logout </li>
-            </ul>
-            <h2>Logout of Instagram on IPhone:</h2>
-            <ul>
-                <li>1. Open Instagram app</li>
-                <li>2. Tap the silhouette icon </li>
-                <li>3. Tap the Settings menu</li>
-                <li>4. Tap Logout</li>
-                <li>5. Confirm Logout </li>
-            </ul>
+        <div class="content-wrapper">
+            <div class="content">
+                <h1>Log out of social media when you’re browsing the web</h1>
+                <p>Some apps make it difficult to log out by forcing the user take extra steps to find the log out button. This is a simple solution that helps minimize the amount of information websites can collect about you. </p>
+
+                <div class="solution">
+                    <h2>Logout of Facebook on IPhone:</h2>
+                    <ul>
+                        <li>1. Open the Facebook app</li>
+                        <li>2. Open the menu </li>
+                        <li>3. Select More</li>
+                        <li>4. Select Logout button</li>
+                        <li>5. Confirm Logout </li>
+                    </ul>
+                </div>
+                <div class="solution">
+                    <h2>Logout of Instagram on IPhone:</h2>
+                    <ul>
+                        <li>1. Open Instagram app</li>
+                        <li>2. Tap the silhouette icon </li>
+                        <li>3. Tap the Settings menu</li>
+                        <li>4. Tap Logout</li>
+                        <li>5. Confirm Logout </li>
+                    </ul>
+                </div>
+                <a href="../solutions.html">
+                    <div class="button">
+                        More Solutions
+                    </div>
+                </a>
+            </div>
         </div>
 
     </div>
