--- a/advancedwritting/solutions/beginner-4.html
+++ b/advancedwritting/solutions/beginner-4.html
@@ -12,31 +12,36 @@
 <body class="advanced-writting">
     <div class="wrapper">
         <div class="nav-bar">
-          <ul>
-            <a href="../index.html">
-                <li>Home</li>
-            </a>
-              <a href="../internet.html">
-                  <li>What the Internet Knows</li>
-              </a>
-              <a href="../solutions.html">
-                  <li>Solutions</li>
-              </a>
-          </ul>
-        </div>
-        <div class="content">
-            <h1>Change your smart phone’s privacy settings</h1>
-            <p>Another easy solution to prevent against advertisers tracking you when your use the Internet on your phone.
-              You can do this by turning off the Location Services on your IPhone.</p>
-            <h2>Change privacy settings on an iPhone:</h2>
             <ul>
-                <li>1. Launch settings app from your home screen</li>
-                <li>2. Click Privacy</li>
-                <li>3. Click Location Services </li>
-                <li>4. Click the switch next to Location Services to turn it off</li>
+                <a href="../index.html">
+                    <li>Home</li>
+                </a>
+                <a href="../internet.html">
+                    <li>What the Internet Knows</li>
+                </a>
+                <a href="../solutions.html">
+                    <li>Solutions</li>
+                </a>
             </ul>
         </div>
-
+        <div class="content-wrapper">
+            <div class="content">
+                <h1>Change your smart phone’s privacy settings</h1>
+                <p>Another easy solution to prevent against advertisers tracking you when your use the Internet on your phone. You can do this by turning off the Location Services on your IPhone.</p>
+                <h2>Change privacy settings on an iPhone:</h2>
+                <ul>
+                    <li>1. Launch settings app from your home screen</li>
+                    <li>2. Click Privacy</li>
+                    <li>3. Click Location Services </li>
+                    <li>4. Click the switch next to Location Services to turn it off</li>
+                </ul>
+                <a href="../solutions.html">
+                    <div class="button">
+                        More Solutions
+                    </div>
+                </a>
+            </div>
+        </div>
     </div>
 </body>
 
