--- a/advancedwritting/solutions/beginner-3.html
+++ b/advancedwritting/solutions/beginner-3.html
@@ -12,36 +12,48 @@
 <body class="advanced-writting">
     <div class="wrapper">
         <div class="nav-bar">
-          <ul>
-            <a href="../index.html">
-                <li>Home</li>
-            </a>
-              <a href="../internet.html">
-                  <li>What the Internet Knows</li>
-              </a>
-              <a href="../solutions.html">
-                  <li>Solutions</li>
-              </a>
-          </ul>
+            <ul>
+                <a href="../index.html">
+                    <li>Home</li>
+                </a>
+                <a href="../internet.html">
+                    <li>What the Internet Knows</li>
+                </a>
+                <a href="../solutions.html">
+                    <li>Solutions</li>
+                </a>
+            </ul>
         </div>
-        <div class="content">
-            <h1>Delete Cookies</h1>
-            <p>Cookies are not just for eating! The cookies that exist on your computer are actually small files of data collected by a specific website.
-                They make websites load faster but they also allow websites to collect information about what you do online.</p>
-            <h2>Delete your cookies in Chrome:</h2>
-            <ul>
-                <li>1. Open your browser toolbar and selecting more</li>
-                <li>2. Click the history</li>
-                <li>3. Click clear browsing data</li>
-                <li>4. Under clear browsing data check cookies</li>
-                <li>5. Click clear browsing data </li>
-            </ul>
-            <h2>Delete your cookies in Safari:</h2>
-            <ul>
-                <li>1. Select preferences from the Safari menu</li>
-                <li>2. Select the privacy tab</li>
-                <li>3. Click remove all website data</li>
-            </ul>
+        <div class="content-wrapper">
+            <div class="content">
+                <h1>Delete Cookies</h1>
+                <p>Cookies are not just for eating! The cookies that exist on your computer are actually small files of data collected by a specific website. They make websites load faster but they also allow websites to collect information about what you
+                    do online.</p>
+                <div class="solution">
+                    <h2>Delete your cookies in Chrome:</h2>
+                    <ul>
+                        <li>1. Open your browser toolbar and selecting more</li>
+                        <li>2. Click the history</li>
+                        <li>3. Click clear browsing data</li>
+                        <li>4. Under clear browsing data check cookies</li>
+                        <li>5. Click clear browsing data </li>
+                    </ul>
+                </div>
+                <div class="solution">
+                    <h2>Delete your cookies in Safari:</h2>
+                    <ul>
+                        <li>1. Select preferences from the Safari menu</li>
+                        <li>2. Select the privacy tab</li>
+                        <li>3. Click remove all website data</li>
+                    </ul>
+                  </div>
+                    <a href="../solutions.html">
+                        <div class="button">
+                            More Solutions
+                        </div>
+                    </a>
+                </div>
+            </div>
         </div>
 
     </div>
