--- a/advancedwritting/solutions/intermediate-1.html
+++ b/advancedwritting/solutions/intermediate-1.html
@@ -12,30 +12,37 @@
 <body class="advanced-writting">
     <div class="wrapper">
         <div class="nav-bar">
-          <ul>
-            <a href="../index.html">
-                <li>Home</li>
-            </a>
-              <a href="../internet.html">
-                  <li>What the Internet Knows</li>
-              </a>
-              <a href="../solutions.html">
-                  <li>Solutions</li>
-              </a>
-          </ul>
-        </div>
-        <div class="content">
-            <h1>Browser Extensions</h1>
-            <p>If you are really serious about online privacy there are a lot of browser extensions out there that can help protect you. Disconnect is a great free browser extension that shows you what websites are tracking and allows you to block the websites
-                that are trying to track you.</p>
-            <h2>Install Disconnect:</h2>
             <ul>
-                <li>1. Go to <a href="disconnect.me">disconnect.me</a></li>
-                <li>2. Scroll down the page and select Get Basic</li>
-                <li>3. Click Get Disconnect</li>
-                <li>4. Select Add Extension</li>
-                <li>5. Select tour the interface to become acquainted with the extension </li>
+                <a href="../index.html">
+                    <li>Home</li>
+                </a>
+                <a href="../internet.html">
+                    <li>What the Internet Knows</li>
+                </a>
+                <a href="../solutions.html">
+                    <li>Solutions</li>
+                </a>
             </ul>
+        </div>
+        <div class="content-wrapper">
+            <div class="content">
+                <h1>Browser Extensions</h1>
+                <p>If you are really serious about online privacy there are a lot of browser extensions out there that can help protect you. Disconnect is a great free browser extension that shows you what websites are tracking and allows you to block the
+                    websites that are trying to track you.</p>
+                <h2>Install Disconnect:</h2>
+                <ul>
+                    <li>1. Go to <a href="disconnect.me">disconnect.me</a></li>
+                    <li>2. Scroll down the page and select Get Basic</li>
+                    <li>3. Click Get Disconnect</li>
+                    <li>4. Select Add Extension</li>
+                    <li>5. Select tour the interface to become acquainted with the extension </li>
+                </ul>
+                <a href="../solutions.html">
+                    <div class="button">
+                        More Solutions
+                    </div>
+                </a>
+            </div>
         </div>
 
     </div>
