--- a/advancedwritting/solutions/intermediate-2.html
+++ b/advancedwritting/solutions/intermediate-2.html
@@ -12,30 +12,36 @@
 <body class="advanced-writting">
     <div class="wrapper">
         <div class="nav-bar">
-          <ul>
-            <a href="../index.html">
-                <li>Home</li>
-            </a>
-              <a href="../internet.html">
-                  <li>What the Internet Knows</li>
-              </a>
-              <a href="../solutions.html">
-                  <li>Solutions</li>
-              </a>
-          </ul>
-        </div>
-        <div class="content">
-            <h1>Use DuckDuckGo</h1>
-            <p>While Google is definitely the biggest name in the game, other search engines do exist. DuckDuckGo is a search engine that does not track you, does not store your personal data and does not show you any ads based on your search history. Unfortunately,
-                there are some tradeoffs when using smaller search engines. You may not always be able to find the same amount of search results or even the same results that you would find when using Google. That being said, if your privacy is important,
-                this is the search engine for you!</p>
-            <h2>Get DuckDuckGo:</h2>
             <ul>
-                <li>1. Go to <a href="https://duckduckgo.com">https://duckduckgo.com</a></li>
-                <li>2. Use the search the same way you would use Google’s!</li>
+                <a href="../index.html">
+                    <li>Home</li>
+                </a>
+                <a href="../internet.html">
+                    <li>What the Internet Knows</li>
+                </a>
+                <a href="../solutions.html">
+                    <li>Solutions</li>
+                </a>
             </ul>
         </div>
-
+        <div class="content-wrapper">
+            <div class="content">
+                <h1>Use DuckDuckGo</h1>
+                <p>While Google is definitely the biggest name in the game, other search engines do exist. DuckDuckGo is a search engine that does not track you, does not store your personal data and does not show you any ads based on your search history.
+                    Unfortunately, there are some tradeoffs when using smaller search engines. You may not always be able to find the same amount of search results or even the same results that you would find when using Google. That being said, if your
+                    privacy is important, this is the search engine for you!</p>
+                <h2>Get DuckDuckGo:</h2>
+                <ul>
+                    <li>1. Go to <a href="https://duckduckgo.com">https://duckduckgo.com</a></li>
+                    <li>2. Use the search the same way you would use Google’s!</li>
+                </ul>
+                <a href="../solutions.html">
+                    <div class="button">
+                        More Solutions
+                    </div>
+                </a>
+            </div>
+        </div>
     </div>
 </body>
 
