--- a/index.html
+++ b/index.html
@@ -29,32 +29,13 @@
                         <img id="name-image" src="assets/name.svg"></img>
                     </div>
                 </div>
-                <div class="sub-text-wrapper">
-                    <div class="text"> <img id="title-image" src="assets/title.svg"></img>
-                    </div>
-                </div>
                 <div class="right">
-                    <div class="header-image-wrapper">
-                        <img id="header-image" class="header-image" src="assets/sabrina_compressed.png"></img>
-                    </div>
                     <div class="color-block"></div>
                 </div>
-                <div class="arrow-wrapper">
-                    <div class="about-me">
-                        <p>about me</p>
-                    </div>
-                    <div class="line"></div>
-                </div>
             </div>
-            <div class="about-section">
-                <div class="hideme text-wrapper">
-                    <div class="title-wrapper">
-                        <div class="line"></div>
-                        <h2>Hello. I am a Designer and Developer living in Boston.</h2></div>
-                    <p> I am a designer and developer leaving in Boston and originally from Portland Oregon. I am currently pursuing a degree in Computer Science and Interactive Media at Northeastern University. I am passionate about tackling problems at
-                        the intersection of design, technology and user experience. In addition to my design and development skills, I have a background in fine arts and enjoy painting in my free time.
-                    </p>
-                    <p class="get-in-touch">I am always looking to work on interesting projects! Let me know if you want to collaborate.</p>
+            <div class="header-title-wrapper">
+                <div class="line"></div>
+                <div class="text-wrapper">
                     <div class="contact">
                         <a href="mailto:kantor.sa@husky.neu.edu">
                             <p>email</p>
@@ -70,13 +51,67 @@
                     </div>
                 </div>
             </div>
+            <div class="about-section">
+                <div class="bg"></div>
+
+            </div>
 
             <div id="work-section" class="portfolio">
-
-
-                <div id="zealery" class="project hideme portfolio-item">
+              <div class="row">
+              <div class="col-1 hideme">
+                <div id="letterforms" class="project portfolio-item">
+                      <a href="work/24-letterforms.html">
+                        <div class="portfolio-item-text">
+                            <p>Design</p>
+                            <h1>21 Letterforms</h1>
+                            <div class="view-work">
+                                <p>view work</p>
+                                <div class="line"></div>
+                            </div>
+                        </div>
+                        <div class=" portfolio-item-image ">
+                            <img src="work/images/typography/1.png">
+                        </div>
+                      </a>
+                </div>
+              </div>
+                <div class="col-2 hideme">
+                  <div id="do-it-with-code" class="project portfolio-item">
+                        <a href="work/do-it-with-code.html">
+                          <div class="portfolio-item-text">
+                              <p>Design</p>
+                              <h1>Do It With Code</h1>
+                              <div class="view-work">
+                                  <p>view work</p>
+                                  <div class="line"></div>
+                              </div>
+                          </div>
+                          <div class=" portfolio-item-image ">
+                              <img src="work/images/doItWithCode/eden.png">
+                          </div>
+                        </a>
+                  </div>
+                  <div id="everyday-boston" class="project portfolio-item">
+                      <a href="work/everyday-boston.html">
+                          <div class="portfolio-item-text">
+                              <p>Managment, Design & Development</p>
+                              <h1>Everyday Boston</h1>
+                              <div class="view-work">
+                                  <p>view work</p>
+                                  <div class="line"></div>
+                              </div>
+                          </div>
+                          <div class=" portfolio-item-image ">
+                              <img class="logo" src="work/images/everydayBoston/logo.svg">
+                              <img src="work/images/everydayBoston/background.png">
+                          </div>
+                      </a>
+                  </div>
+                </div>
+              </div>
+              <div class="row hideme row-full">
+                <div id="zealery" class="project portfolio-item">
                     <a href="work/zealery.html">
-
                         <div class="portfolio-item-text">
                             <p>Design & Development</p>
                             <h1>Zealery </h1>
@@ -88,73 +123,49 @@
                         <div class=" portfolio-item-image ">
                             <img src="work/images/zealery-main.png">
                         </div>
+                    </a>
+                </div></div>
+              <div class="row">
+                <div class="col-2 hideme">
 
-                    </a>
+                  <div id="music-visualizer" class="project portfolio-item">
+                      <a href="work/music-visualizer.html">
+                          <div class="portfolio-item-text">
+                              <p>Design & Development</p>
+                              <h1>Music Visualizer</h1>
+                              <div class="view-work">
+                                  <p>view work</p>
+                                  <div class="line"></div>
+                              </div>
+                          </div>
+                          <div class="portfolio-item-image ">
+                              <img src="work/images/music-visualizer-main.jpg">
+                          </div>
+                      </a>
+                  </div>
                 </div>
-                <div id="deschutes" class="project hideme portfolio-item">
-                    <a href="work/deschutes-river-guide.html">
-                        <div class="portfolio-item-text">
-                            <p>Design & Development</p>
-                            <h1>Deschutes River </br> Guide</h1>
-                            <div class="view-work">
-                                <p>view work</p>
-                                <div class="line"></div>
-                            </div>
-                        </div>
-                        <div class=" portfolio-item-image ">
-                            <img src="work/images/deschutes-main.png">
-                            <img src="work/images/deschutes-2.png">
-                        </div>
-                        < </a>
+                <div class="col-1 hideme">
+                  <div id="graphic-design" class="project hideme portfolio-item">
+                      <a href="work/graphic-design.html">
+                          <div class="portfolio-item-text">
+                              <p>Design</p>
+                              <h1>Graphic Design</h1>
+                              <div class="view-work">
+                                  <p>view work</p>
+                                  <div class="line"></div>
+                              </div>
+                          </div>
+                          <div class=" portfolio-item-image ">
+                              <img src="work/images/run.jpg">
+                          </div>
+                      </a>
+                  </div>
                 </div>
-
-                <div id="graphic-design" class="project hideme portfolio-item">
-                    <a href="work/graphic-design.html">
-                        <div class="portfolio-item-text">
-                            <p>Design</p>
-                            <h1>Graphic Design</h1>
-                            <div class="view-work">
-                                <p>view work</p>
-                                <div class="line"></div>
-                            </div>
-                        </div>
-                        <div class=" portfolio-item-image ">
-                            <img src="work/images/run.jpg">
-                        </div>
-                    </a>
-                </div>
-                <div id="music-visualizer" class="project hideme portfolio-item">
-                    <a href="work/music-visualizer.html">
-                        <div class="portfolio-item-text">
-                            <p>Design & Development</p>
-                            <h1>Music Visualizer</h1>
-                            <div class="view-work">
-                                <p>view work</p>
-                                <div class="line"></div>
-                            </div>
-                        </div>
-                        <div class=" portfolio-item-image ">
-                            <img src="work/images/music-visualizer-main.jpg">
-                        </div>
-
-                    </a>
-                </div>
-                <div id="macro" class="project hideme  portfolio-item">
-                    <a href="work/macro-market.html">
-                        <div class="portfolio-item-text">
-                            <p>Development</p>
-                            <h1>Macro Market</h1>
-                            <div class="view-work">
-                                <p>view work</p>
-                                <div class="line"></div>
-                            </div>
-                        </div>
-                        <div class="portfolio-item-image ">
-                            <img src="work/images/macro-market-main.png">
-                        </div>
-                    </a>
                 </div>
 
+
+              </div>
+            </div>
 
 
 
