--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
                 <div class="line"></div>
                 <div class="text-wrapper">
                     <div class="contact">
-                        <a href="mailto:kantor.sa@husky.neu.edu">
+                        <a class="contact-hide" href="mailto:kantor.sa@husky.neu.edu">
                             <p>email</p>
                         </a>
-                        <div class=line></div>
-                        <a href="https://www.linkedin.com/in/sabrina-kantor-610354b5/">
+                        <div class="line contact-hide"></div>
+                        <a class="contact-hide" href="https://www.linkedin.com/in/sabrina-kantor-610354b5/">
                             <p>linkedin</p>
                         </a>
-                        <div class=line></div>
-                        <a href="https://github.com/kantors">
+                        <div class="line contact-hide"></div>
+                        <a class="contact-hide" href="https://github.com/kantors">
                             <p>github</a>
                         </p>
                     </div>
@@ -54,7 +54,7 @@
 
             <div id="work-section" class="portfolio">
               <div class="row">
-              <div class="col-1 hideme">
+              <div class="col-1 row-1-col">
                 <div id="letterforms" class="project portfolio-item">
                       <a href="work/24-letterforms.html">
                         <div class="portfolio-item-text">
@@ -71,7 +71,7 @@
                       </a>
                 </div>
               </div>
-                <div class="col-2 hideme">
+                <div class="col-2 row-1-col">
                   <div id="do-it-with-code" class="project portfolio-item">
                         <a href="work/do-it-with-code.html">
                           <div class="portfolio-item-text">
